
    ============================
    QtilitiesCore:
    ============================
    New Classes:
    - Added QtilitiesFileInfo class.
    - New FileUtils class. At present this file contains a static function to remove a directory along with all its contents. In the future all file related functionality will be added to this class.

    Improvements and Notable Changes:
    - Observers
        - New processingCycleStarted() and processingCycleEnded() signals which are emitted when processing cycles starts and ends on the observer.
        - The << stream operator is now overloaded and can be used to attach subjects to Observers.
        - Observer::specificObserverOwnership attachment now makes the observer to which is attached the QObject parent() of the subject.
        - Observer::refreshViewsLayout() got new parameter to allow you to select specific objects in your refreshed views.
        - Observer's layoutChanged() signal got a new parameter which will contain references of added objects if addition of objects triggered the signal, or if a paramater was passed through the refreshViewsLayout() signal.
        - OBSERVER_UNCATEGORIZED_CATEGORY is now removed. Thus you can add categorized and uncategorized subjects to the same observer.
        - Observer::setDisplayHints() is now obsolete. It is replaced by Observer::inheritDisplayHints().
        - New ObserverHints::ModificationStateDisplayHint hint which allows the modification state of items to be displayed in observer widgets. This hint is now part of binary and XML tree exports.
        - Improved XML importing/exporting of observers.
        - Observer & Project modification state optimizations. The order in which subjects and listeners are notified in the IModificationNotifier implementations changed: Subjects are first notified and then listeners, in this way listeners can check the modiciation state and it would return the correct results.