@@ -120,6 +120,7 @@ If \p ExportData is enabled:
   - Observer description (QString)
   - Access mode (quint32)
   - Access mode scope (quint32)
+  - Object deletion policy (quint32)
   - Number of categories for which access modes are defined (quint32)
   - The categories (Qtilities::Core::QtilitiesCategory)
   - Indication if observer hints are used in the observer (bool)
