@@ -51,7 +51,7 @@ CONFIG              += ordered qt
 #****************************************************************************
 # Build mode:
 #****************************************************************************
-CONFIG              += release
+CONFIG              += debug
 
 #****************************************************************************
 # Library includes
